[package]
name = "procedural_generator"
version = "0.1.0"
authors = ["Ps <sexypistolcs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generator_gui = { path = "../generator_gui" }
gl_wrapper = { path = "../gl_wrapper" }
vertex_point_generator = { path = "../vertex_point_generator" }
sdl2={version = "0.34.3", features = ["bundled", "static-link"]}
gl="0.6.0"